style/style.css
/* ... */
section .galery-hero .galery-container .galery-container-img .galery-container-img1:hover {
  filter: brightness(1);
  -webkit-filter: brightness(1);
}

section .galery-hero .galery-container .galery-container-img .galery-container-img1 i {
  opacity: .8;
  transition: .3s;
  -webkit-transition: .3s;
  -moz-transition: .3s;
  -ms-transition: .3s;
  -o-transition: .3s;
  color: var(--primary);
}

section .galery-hero .galery-container .galery-container-img .galery-container-img1:hover i {
  opacity: 1;
  transform: scale(1.2);
  -webkit-transform: scale(1.2);
  -moz-transform: scale(1.2);
  -ms-transform: scale(1.2);
  -o-transform: scale(1.2);
}



section .galery-hero .galery-container .galery-container-img .galery-container-img2 {
  grid-area: 1 / 3 / 2 / 4;
  background-image: url("../assets/2.jpg");
  background-size: cover;
  background-position: center;
}

section .galery-hero .galery-container .galery-container-img .galery-container-img3 {
  grid-area: 1 / 4 / 2 / 5;
  background-image: url("../assets/3.jpg");
  background-size: cover;
  background-position: center;
}

section .galery-hero .galery-container .galery-container-img .galery-container-img4 {
  grid-area: 2 / 3 / 3 / 4;
  background-image: url("../assets/1.jpg");
  background-size: cover;
  background-position: center;
}

section .galery-hero .galery-container .galery-container-img .galery-container-img5 {
  grid-area: 2 / 4 / 3 / 5;
  background-image: url("../assets/4.jpg");
  background-size: cover;
  background-position: center;
}


.video {
  position: fixed;
  z-index: 99999;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(17, 17, 17, .5);
  backdrop-filter: blur(5px);
  display: none;
  place-items: center;
}

.video .close {
  position: absolute;
  top: 0;
  right: 0;
  width: 3.5rem;
  height: 3.5rem;
  display: grid;
  place-items: center;
  cursor: pointer;
}

.video .close i {
  color: var(--primary);
}

.show {
  display: grid;
}



.slides-container {
  background-color: rebeccapurple;
  position: fixed;
  z-index: 99999;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(17, 17, 17, .5);
  backdrop-filter: blur(5px);
  display: none;
  align-items: center;
  justify-content: center;
  flex-direction: row;
}

.showSlide {
  display: flex;
}

.slides-container img {
  width: 80%;
  height: 500px;
  object-fit: contain;
}

.slides-container i {
  position: absolute;
  cursor: pointer;
  color: var(--primary);
}

.slides-container i.before {
  left: 10%;
}

.slides-container i.next {
  right: 10%;
}

.slides-container .close {
  position: absolute;
  top: 0;
  right: 0;
  width: 3.5rem;
  height: 3.5rem;
  display: grid;
  place-items: center;
  cursor: pointer;
}

.slides-container .close i {
  color: var(--primary);
}

/* ---------  Galery Section End ---------*/




/* ---------  Client Section Start ---------*/

section.client-section {
  width: 100%;
  background-color: var(--primary);
}

section .client-container {
  height: 100%;
  max-width: var(--max-xl);
  margin: auto;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 3rem 1rem;
  flex-wrap: wrap;
}

section .client-container a {
  filter: saturate(0);
  -webkit-filter: saturate(0);
  transition: .3s;
  -webkit-transition: .3s;
  -moz-transition: .3s;
  -ms-transition: .3s;
  -o-transition: .3s;
}

section .client-container a img {
  width: 10rem;
  object-fit: contain;
}



/* ---------  Client Section End ---------*/






/* ------------ Reviews Section Start ------------ */
section.review-section {
  width: 100%;
  /* height: 85vh; */
  background-image: url("../assets/review-hero.jpg");
  background-size: cover;
  background-position: center;
}

section .review-hero {
  width: 100%;
  height: 100%;
  background-color: rgba(23, 23, 23, .9);
}

section .review-hero .review-container {
  height: 100%;
  max-width: var(--max-xl);
  margin: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 5rem 1rem;
}

section .review-hero .review-container h4 {
  font-size: 2rem;
  color: var(--white);
  margin-bottom: 1.5rem;
}

section .review-hero .review-container p {
  text-align: center;
  font-size: 1rem;
  color: var(--white);
  max-width: var(--max-lg);
}

section .review-hero .review-container .review-cards-wrapper {
  padding-top: 3rem;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  width: 100%;
  height: 100%;
}

section .review-hero .review-container .review-cards-wrapper .review-cards-container {
  max-width: 19rem;
  display: flex;
  flex-direction: column;
  align-items: center;
}

section .review-hero .review-container .review-cards-wrapper .review-cards-container .card-comment {
  display: flex;
  background-color: var(--dark);
  padding: 0 1rem;
  cursor: pointer;
  border-radius: 1rem;
  -webkit-border-radius: 1rem;
  -moz-border-radius: 1rem;
  -ms-border-radius: 1rem;
  -o-border-radius: 1rem;
  transition: .3s;
  -webkit-transition: .3s;
  -moz-transition: .3s;
  -ms-transition: .3s;
  -o-transition: .3s;
  transform: translateY(15%);
  -webkit-transform: translateY(15%);
  -moz-transform: translateY(15%);
  -ms-transform: translateY(15%);
  -o-transform: translateY(15%);
}

section .review-hero .review-container .review-cards-wrapper .review-cards-container .card-comment:hover {
  background-color: var(--primary);
  transform: scale(1.03) translateY(0%);
  -webkit-transform: scale(1.03) translateY(0%);
  -moz-transform: scale(1.03) translateY(0%);
  -ms-transform: scale(1.03) translateY(0%);
  -o-transform: scale(1.03) translateY(0%);
}


section .review-hero .review-container .review-cards-wrapper .review-cards-container .card-comment .card-quote {
  height: 5rem;
  width: 3rem;
  background-image: url("../assets/quote.png");
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}
/* ... */

